<resources>
    <string name="app_name">Chill</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="sign_in_with_email">Sign up with Email</string>
    <string name="pre_terms_slogan">By signing up to Chill you accept our</string>
    <string name="terms">Terms of Use</string>
    <string name="already_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to Chill</string>
    <string name="continue_label">Continue</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="facebook_app_id">217705585521766</string>
    <string name="preference_title">What brings you to chill?\nSelect your main goals</string>
    <string name="home">Home</string>
    <string name="sleep">Sleep</string>
    <string name="meditate">Meditate</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>
    <string name="recommended_label">Recommended for you</string>
    <string name="continue_meditating_label">Continue Meditating</string>
    <string name="basic_label">Basics</string>
    <string name="new_label">New</string>
    <string name="all_label">All</string>
    <string name="sleep_subtitle">Enjoy a peaceful and deep sleep with these guided meditations.</string>
    <string name="my">My</string>
    <string name="day_label">Day %d</string>
    <string name="min_label">%d min</string>
    <string name="you_did_it">You did it!</string>
    <string name="mindful_days">Mindful days</string>
    <string name="mindful_days_lines">Mindful\nDays</string>
    <string name="current_streak">Current Streak</string>
    <string name="current_streak_lines">Current\nStreak</string>
    <string name="longest_streak">Longest Streak</string>
    <string name="longest_streak_lines">Longest\nStreak</string>
    <string name="favorite_label">Favorite</string>
    <string name="download_label">Download</string>
    <string name="share_label">Share</string>
    <string name="rate_label">Rate the guidance in this session</string>
    <string name="available_in_offline">Available in offline</string>
    <string name="stats">STATS</string>
    <string name="days">Days</string>
    <string name="session_history">SESSION HISTORY</string>
    <string name="check_your_email">Please, check your email</string>
    <string name="stress_less">Stress less, relax more</string>
    <string name="join_to_our_community">Join Our Community</string>
    <string name="included_1">Access to all meditations</string>
    <string name="included_2">Stories, music, and mindfulness</string>
    <string name="included_3">Stress less, sleep better</string>
    <string name="try_completely_free">Try Completely Free</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="subscribe_description">7 days FREE trial, then only $59.99/yr ($4.99/mo)</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="text">Chill subscription automatically renews unless auto-renew is turned off at least 24 hours before current period ends. Payment will be charged to your iTunes Account. Subscriptions may be managed by the user and auto-renewal may be turned off in Account Settings.</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="reminders">Reminders</string>
    <string name="rate">Rate Chill</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
</resources>
