<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/login_background_blur" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="62sp" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="#F2F2F2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/name_icon"
            android:hint="@string/name"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="#C3C3C3"
            android:textColorHint="#C3C3C3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/email_icon"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="#C3C3C3"
            android:textColorHint="#C3C3C3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_background"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/password_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="#C3C3C3"
            android:textColorHint="#C3C3C3"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_email_login_button"
            android:gravity="center"
            android:text="@string/continue_label"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/body"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alreadyAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textColor="#D0D0D0" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/preTerms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_terms_slogan"
            android:textColor="#D0D0D0"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/terms"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>