<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/subscribe_background" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:text="@string/stress_less"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/title"
                android:layout_centerInParent="true"
                android:gravity="bottom">

                <TextView
                    android:id="@+id/join"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:text="@string/join_to_our_community"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/join"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_five_starts" />

                    <TextView
                        android:id="@+id/value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:text="4.9"
                        android:textColor="#40a3ff"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/include_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rating"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/included_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_check"
                        android:gravity="center"
                        android:text="@string/included_1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/included_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_check"
                        android:gravity="center"
                        android:text="@string/included_2"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/included_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="5dp"
                        android:drawableStart="@drawable/ic_check"
                        android:gravity="center"
                        android:text="@string/included_3"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/subscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@id/include_container"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ic_subscribe_button_background"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:gravity="center"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/try_completely_free"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cancel_anytime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subscribe"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/cancel_anytime"
                    android:textColor="#505050" />

                <TextView
                    android:id="@+id/subscribe_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cancel_anytime"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/subscribe_description"
                    android:textColor="#505050" />

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/subscribe_description"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text"
                    android:textColor="#505050"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/privacy_policy"
                        android:textColor="#505050" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/terms"
                        android:textColor="#505050" />
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</RelativeLayout>