<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.mmin18.widget.RealtimeBlurView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:realtimeBlurRadius="10dp"
        app:realtimeOverlayColor="#64333333" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_close_black_24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:alpha="0.3"
            android:src="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_friends"
            android:gravity="center_vertical"
            android:text="@string/invite_friends"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:alpha="0.3"
            android:src="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_notif"
            android:gravity="center_vertical"
            android:text="@string/reminders"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:alpha="0.3"
            android:src="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="11dp"
            android:drawableStart="@drawable/ic_rate"
            android:gravity="center_vertical"
            android:text="@string/rate"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:alpha="0.3"
            android:src="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_contactus"
            android:gravity="center_vertical"
            android:text="@string/contact_us"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:alpha="0.3"
            android:src="@android:color/white" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_logout"
            android:gravity="center_vertical"
            android:text="@string/logout"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:alpha="0.3"
            android:src="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_info"
            android:gravity="center_vertical"
            android:text="@string/terms"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:alpha="0.3"
            android:src="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/ic_terms"
            android:gravity="center_vertical"
            android:text="@string/privacy_policy"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>